Add data visualization notebook and update annotation paths

--- a/notebooks/annotate.ipynb
+++ b/notebooks/annotate.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "dd5d0d5e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
     "scream = f\"{dataset_path}/scream\"\n",
     "neutral = f\"{dataset_path}/neutral\"\n",
     "\n",
-    "annotations_path = \"../data/annotations\"\n",
+    "annotations_path = \"../data/annotations/annotations.csv\"\n",
     "os.makedirs(annotations_path, exist_ok=True)"
    ]
   },
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "636e1fe6",
    "metadata": {},
    "outputs": [
@@ -707,7 +707,7 @@
     }
    ],
    "source": [
-    "data_path.to_csv(f\"{annotations_path}/annotations.csv\",index=False)\n",
+    "data_path.to_csv(annotations_path,index=False)\n",
     "data_path"
    ]
   }
